# aria-enterprise-agent

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  GO-LIVE.md  README.md  ROADMAP.md  agents.md  cloud-run-service.yaml  lecciones_aprendidas.md  pendiente_fase2.md  pyproject.toml  render.yaml  saas_packaging_plan.md
.github/workflows/: ci.yml  cron.yml
frontend/: .env.local.example  .gitignore  package.json  pnpm-lock.yaml
memory/: MEMORY.md  USER.md  shared_memory.json
migrations/: 0001_tenancy_core.sql  0002_business_tables.sql  0003_system_tables.sql  0004_functions.sql  0005_rls_policies.sql  0006_audit_remediation.sql  0007_proposal_fields.sql  0008_automation_rules.sql  0009_ledger_price.sql  0010_ledger_unique.sql  0011_orders_cache_unique.sql  0013_signup_rpc.sql  0014_billing_fields.sql  README.md
scripts/: apply_migrations.py  provision_user.py  seed_demo.py  seed_public_demo.py  smoke_app_auth.py  smoke_chat.py  smoke_live.py  verify_deploy.sh  verify_isolation.py  verify_ledger_etl.py  verify_p2_aggregates.py
skills/analisis_cohortes_retencion_clientes/: SKILL.md  run.py
skills/calcular_descuento/: SKILL.md  run.py
skills/calcular_kpis_ventas_totales/: SKILL.md  run.py
specs/auth/: tenant-auth.spec.md
specs/canvas/: agent-canvas-tools.spec.md  canvas-persistence.spec.md  card-templates.spec.md  smart-wrapper.spec.md  timeline-reducer.spec.md
specs/data/: insforge-adapter.spec.md
specs/data-science/: forecasting.spec.md
specs/infra/: persistent-session.spec.md  rate-limiting.spec.md
specs/integrations/: tenant-woocommerce.spec.md
specs/tenancy/: tenant-isolation.spec.md
src/: __init__.py  config.py  main.py  query_proposals.py  test_supabase.py  test_wc.py
src/agents/: __init__.py  coordinator.py  coordinator_llm.py  deep_researcher.py  demand_planner.py  document_worker.py  finance_analyst.py  inventory_analyst.py  kernel.py  pipelines.py  procurement_analyst.py  sales_analyst.py  strategic_advisor.py  sync_worker.py  synthesizer.py
src/aria_enterprise_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/callbacks/: __init__.py  security.py  validation.py
src/graph/: __init__.py  skill_retriever.py
tests/: load_test.js  test_anomaly.py  test_forecasting.py  test_main_cutover.py  test_tools.py
(+98 files in other folders)
