[project]
name = "aria-enterprise-agent"
version = "1.0.0"
description = "ARIA-OS: Enterprise Agentic Operating System powered by Google ADK"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "supabase>=2.0.0",
    "httpx>=0.27.0",
    "weasyprint>=62.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
audio = ["google-cloud-speech>=2.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
