[project]
name = "aria-enterprise-agent"
version = "1.0.0"
description = "ARIA-OS: Enterprise Agentic Operating System powered by Google ADK"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "supabase>=2.0.0",
    "ag-ui-adk>=0.6.0",
    "httpx>=0.27.0",
    "weasyprint>=62.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    # Forecasting (Tier 1, BQML-free): statistical models for the data-science
    # specialist's demand forecasting. statsmodels is pure scientific-Python (no
    # numba) → robust wheels on both py3.11 (prod image) and py3.14 (local).
    "statsmodels>=0.14",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    # File ingestion / chat attachments: read .xlsx (pandas needs openpyxl) and .pptx.
    "openpyxl>=3.1",
    "python-pptx>=0.6",
]

[project.optional-dependencies]
audio = ["google-cloud-speech>=2.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# SpecDD: one test file per spec, named test_<feature>.py (Python rendering of
# the tests/<area>/<feature>.test.ts convention; the .test.py double-extension
# breaks pytest's module-name derivation, so Python uses the test_ prefix).
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
testpaths = ["tests"]
